--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,10 +16,13 @@
                             <h4>
                                 <%= pergunta.titulo %>
 
+
                             </h4>
                         </div>
                         <div class="card-footer">
-                            <button class="btn btn-success">Responder</button>
+                            <!-- Configurando para ir direto para pagina da pergunta-->
+                            <a href="/pergunta/<%= pergunta.id %> "><button class="btn btn-success">Responder</button></a>
+
                         </div>
                     </div>
 
